# text-ex-cpp

./: CMakeLists.txt  README.md
.cmake/Modules/: Utils.cmake
src/: main.cpp
src/lib/: any.hpp  master.hpp
test/: Any.cpp  master.cpp
